tests/golden/type_errors/struct_constructor_duplicate_field.cd
struct Person { name: string }
let p = Person { name: "Ada", name: "Grace" };
